<resources>
    <string name="app_name">5Ship</string>
    <string name="google_map_app_api">AIzaSyDow14WWqKhSPHt6huqg2l7NaCE1z9cz-k</string>
    <string name="google_geo_api_key">AIzaSyDow14WWqKhSPHt6huqg2l7NaCE1z9cz-k</string>
    <string name="google_server_api_key">AIzaSyCTDkSS8fZVh86d0KCdif0cq6nYOlHpDks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_login_activity">Đăng nhập</string>
    <string name="title_activity_notification">Thông báo</string>
    <string name="title_activity_maps">Bản đồ</string>
    <string name="title_activity_shipping_order">Tìm kiếm đơn hàng</string>
    <string name="title_activity_customer_info">Thông tin tài khoản</string>
    <string name="title_activity_order_history">Lịch sử đơn hàng</string>
    <string name="fiveship_username_hint">Email</string>
    <string name="fiveship_label_password">Password</string>
    <string name="fiveship_label_login">Login</string>
    <string name="fiveship_label_sign_up">Sing Up</string>
    <string name="title_activity_edit_customer_info">Cập nhật thông tin</string>
    <string name="app_logo">App Logo</string>
    <string name="login_required_message">Đăng nhập thất bại: Vui lòng nhập đầy đủ email và mật khẩu của bạn.</string>
    <string name="login_failed">Đăng nhập không thành công, bạn vui lòng thử lại.</string>
    <string name="loading_message">Loading…</string>
    <string name="login_has_error">Đăng nhập thất bại: Vui lòng thử lại sau.</string>
    <string name="login_success">Đăng nhập thành công.</string>
    <string name="title_activity_shipper">Map</string>
    <string name="title_shipping_order_tab">Vận đơn</string>
    <string name="title_map_tab">ĐƠN HÀNG QUANH ĐÂY</string>
    <string name="title_notification_tab">Thông báo</string>
    <string name="my_location">Vị trí của bạn</string>
    <string name="exit_message">Nhấn quay lại lần nữa để thoát ứng dụng</string>
    <string name="title_activity_message">Tin nhắn</string>
    <string name="title_message_tab">Tin nhắn</string>
    <string name="shipping_order_new">ĐƠN HÀNG ĐANG CHỜ</string>
    <string name="shipping_order_nearly">Xung quanh</string>
    <string name="shipping_order_received">Đã nhận</string>
    <string name="shipping_order_completed">Hoàn thành</string>
    <string name="login_tab">Đăng nhập</string>
    <string name="register_tab">Đăng ký</string>
    <string name="menu_action_search">Tìm kiếm</string>
    <string name="menu_action_refresh">Làm mới</string>
    <string name="title_activity_direction">Chỉ đường</string>
    <string name="title_activity_list_order_in_place">Danh sách đơn hàng</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_text">Bạn vui lòng chờ…</string>
    <string name="no_result_text">Không có dữ liệu.</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="new_password_field">Mật khẩu mới</string>
    <string name="re_password_field">Lại mật khẩu</string>
    <string name="address">Địa chỉ</string>
    <string name="menu_navigator_activity">Menu</string>
    <string name="menu_pending_tab_title">ĐANG CHỜ</string>
    <string name="menu_received_tab_title">CHỜ NHẬN HÀNG</string>
    <string name="menu_shipping_tab_title">ĐANG GIAO</string>
    <string name="menu_finish_tab_title">KẾT THÚC</string>
    <string name="menu_complete_tab_title">ĐÃ GIAO</string>
    <string name="menu_cancel_tab_title">HỦY</string>
    <string name="title_activity_menu_navigator">Thông tin tài khoản</string>
    <string name="title_activity_splash_screen">5Ship</string>
    <string name="require_position_message">Vui lòng bật các dịch vụ định vị. Nên để nó ở chế độ \"Độ chính xác cao\". </string>
    <string name="require_internet_message">Không tìm thấy bất kỳ kết nối mạng nào.</string>
    <string name="facebook_app_id">1524013867871347</string>
    <string name="login_cancel">Đăng nhập đã bị hủy bỏ</string>
    <string name="login_facebook_fail">Rất tiếc, không thể kết nối tới tài khoản Facebook của bạn</string>
    <string name="com_facebook_loginview_log_in_button">Đăng nhập bằng Facebook</string>
    <string name="com_facebook_loginview_log_out_button">Đăng xuất Facebook</string>
    <string name="btn_google_login_text">Đăng nhập bằng Google</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="btn_login_text">Đăng nhập</string>
    <string name="btn_logout_from_google">Đăng xuất Google+</string>
    <string name="btn_login_from_google">Đăng nhập bằng Google+</string>
    <string name="connect_google_plus_failed">Không thể kết nối tới tài khoản google plus của bạn.</string>
    <string name="title_activity_register">Đăng ký</string>
    <string name="register_text_link">Tạo tài khoản</string>
    <string name="register_failed">Đã có lỗi trong quá trình đăng ký. Xin vui lòng thử lại.</string>
    <string name="location_required_confirm_box">Vui lòng bật các dịnh vụ định vị</string>
    <string name="title_activity_forgot_password">Quên mật khẩu</string>
    <string name="title_activity_detail_order">Chi tiết đơn hàng</string>
    <string name="btn_register_text">Đăng ký</string>
    <string name="validation_email">Vui lòng nhập đúng địa chỉ email</string>
    <string name="validation_number">Vui lòng nhập đúng định dạng số</string>
    <string name="validation_price">Nhập đúng giá tiền (50k hoặc 50000)</string>
    <string name="validation_not_empty">Vui lòng nhập %1$s</string>
    <string name="validations_not_in_range">%1$s phải từ %2$d đến %3$d ký tự</string>
    <string name="validations_phone_number">Vui lòng nhập đúng số điện thoại</string>
    <string name="re_confirm">Nhập lại %1$s không chính xác</string>
    <string name="account_not_exist">Tài khoản không tồn tại</string>
    <string name="email_field">Email</string>
    <string name="password_field">Mật khẩu</string>
    <string name="full_name_field">Họ tên</string>
    <string name="phone_field">Số điện thoại</string>
    <string name="address_field">Địa chỉ</string>
    <string name="full_name_text_hint">Họ và tên </string>
    <string name="title_order_field">Tiêu đề</string>
    <string name="pre_pay_field">Ứng trước</string>
    <string name="shipping_cost_input_label">Phí ship</string>
    <string name="shipping_cost_field">Phí ship</string>
    <string name="received_date_field">Ngày nhận hàng</string>
    <string name="received_time_field">Giờ nhận hàng</string>
    <string name="order_note_field">Ghi chú</string>
    <string name="from_address_field">Điểm đến</string>
    <string name="to_address_field">Điểm đi</string>
    <string name="street_field">Đường phố</string>
    <string name="house_number_field">Số nhà/ngách/ngõ</string>
    <string name="title_add_ship_info_dialog">Thông tin đơn hàng %1$s</string>
    <string name="required_internet_message">Kết nối tới mạng thất bại</string>
    <string name="required_internet_message_2">Vui lòng kiểm tra lại đường truyền</string>
    <string name="try_again">Thử lại</string>
    <string name="okay_message">Đồng ý</string>
    <string name="title_activity_shipping_order_detail">ShippingOrderDetailActivity</string>
    <string name="not_require_pre_pay">Không cần ứng trước</string>
    <string name="pre_pay_text_label">Tiền hàng: </string>
    <string name="shipping_cost_label">Tiền ship: </string>
    <string name="a_thousand_dong_symbol">K</string>
    <string name="received_order_fail">Nhận đơn hàng không thành công, vui lòng thử lại.</string>
    <string name="get_order_confirm_message">Bạn muốn nhận đơn hàng này?</string>
    <string name="received_order_success">Nhận đơn hàng thành công.</string>
    <string name="update_info_success">Cập nhật thông tin thành công</string>
    <string name="update_info_fail">Cập nhật thông tin thất bại. Xin vui lòng thử lại sau</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="ok">Okay</string>
    <string name="label_order_created">"Đăng lúc: "</string>
    <string name="label_order_date_received">"Nhận lúc: "</string>
    <string name="order_status">"Trạng thái: "</string>
    <string name="cancel_order_success">Hủy đơn hàng thành công</string>
    <string name="title_activity_main_shop">MainShopActivity</string>
    <string name="search_placeholder">Tìm kiếm</string>
    <string name="title_activity_search">Lọc đơn</string>
    <string name="between_fifty_and_one_hundred_k">50K - 100K</string>
    <string name="less_than_fifty_k"><![CDATA[<= 50K]]></string>
    <string name="bigger_than_one_hundred_k"><![CDATA[> 100K]]></string>
    <string name="filter_by_shipcost_default_title">Lọc theo giá</string>
    <string name="title_activity_create_shipping_order">Tạo đơn hàng</string>
    <string name="find_nearly_shipping_order">Tìm đơn hàng xung quanh</string>
    <string name="map_direction">Chỉ đường</string>
    <string name="find_nearly_shipper">Tìm shipper</string>
    <string name="create_order_shipping">Tạo đơn hàng</string>
    <string name="title_alert_dialog">Thông báo</string>
    <string name="no_named">No named</string>
    <string name="shop_ship_tab_shipper_near">SHIPPER GẦN BẠN</string>
    <string name="shop_ship_tab_new">ĐƠN CHỜ SHIPPER</string>
    <string name="order_status_pending_stt">Chờ shipper nhận</string>
    <string name="order_status_pendding_receive_stt">Đang chờ nhận hàng</string>
    <string name="order_received_stt">Đã nhận hàng</string>
    <string name="order_delivering_stt">Đang giao hàng</string>
    <string name="order_end_stt">Kết thúc</string>
    <string name="order_completed_stt">Hoàn thành</string>
    <string name="order_canceled_stt">Đã hủy</string>
    <string name="confirm_cancel_order_message">Bạn chắc chắn muốn hủy đơn hàng:</string>
    <string name="title_activity_navigator">NavigatorActivity</string>
    <string name="map_toolbar_title">Bản đồ</string>
    <string name="notification_toolbar_title">Thông báo</string>
    <string name="search_toolbar_title">Tìm kiếm</string>
    <string name="bs_more">Xem thêm</string>
    <string name="filter">Lọc nâng cao</string>
    <string name="suggest_to_use_place_by_google">Bạn vui lòng chọn địa chỉ đã được gợi ý.</string>
    <string name="use_shop_address_suggested_by_google">Vui lòng chọn địa chỉ shop đã được gợi ý.</string>
    <string name="use_ship_address_suggested_by_google">Vui lòng chọn địa chỉ khách đã được gợi ý.</string>
    <string name="required_from_to_address_message">Vui lòng nhập điểm đến và điểm đi.</string>
    <string name="rating_success_message">Đánh giá của bạn đã được gửi đi</string>
    <string name="rating_fail_message">Gửi đánh giá thất bại. Vui lòng thử lại</string>
    <string name="shop_carer">Ngành hàng</string>
    <string name="moto_id_field">Biển số xe</string>
    <string name="license_motor_field">Số bằng lái</string>
    <string name="order_title_field">Tên đơn hàng</string>
    <string name="date_received_field">Thời gian nhận hàng</string>
    <string name="home_number_field">Số nhà</string>
    <string name="title_activity_pre_show_detail">PreShowDetailActivity</string>
    <string name="interval">Khoảng</string>
    <string name="hour">giờ</string>
    <string name="minute">phút</string>
    <string name="second">giây</string>
    <string name="view_more">Xem thêm</string>
    <string name="weight_bigger_ten_kilo"><![CDATA[Nặng (<10kg)]]></string>
    <string name="take_a_photo">Chụp ảnh</string>
    <string name="reason_cancel_shipper_dont_get_merchandise">Hủy do shipper không đến lấy hàng</string>
    <string name="reason_cancel_customer_cancel_deals">Hủy do khách không mua hàng nữa</string>
    <string name="reason_cancel_shop_has_found_other_one">Hủy do đã tìm được shipper khác</string>
    <string name="reason_cancel_create_in_wrong_info">Hủy do tạo nhầm thông tin đơn hàng</string>
    <string name="reason_cancel_other_reason">Lý do khác</string>
</resources>