<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:background="@drawable/splashscreen_background"
    android:padding="0dp"
    tools:mContext=".activity.SplashScreenActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/title_activity_splash_screen"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_logo_slapscreen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/logo"
        android:background="#FFFFFF"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/require_internet_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/required_internet_message"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/required_internet_message_2"
                    android:textColor="@color/fiveship_default_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/reconnect_button"
                    android:layout_width="130dp"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:paddingBottom="7dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:text="@string/try_again"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/require_location_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="Không tìm thấy địa điểm"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/require_position_message"
                    android:textColor="@color/fiveship_default_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/submit_button"
                    android:layout_width="130dp"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:paddingBottom="7dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:text="@string/okay_message"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/require_my_location_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="Không tìm thấy địa điểm"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Làm ơn cho chúng tôi biết vị trí chính xác của bạn"
                    android:textColor="@color/fiveship_default_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/submit_my_location_button"
                    android:layout_width="130dp"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:paddingBottom="7dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:text="@string/okay_message"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
